sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: type mismatch;
 found   : Unit
 required: Boolean
      if(e=1){
          ^